--- a/views/sign-up.html
+++ b/views/sign-up.html
@@ -67,7 +67,7 @@
                 </button>
 
                 <div class="mt-3">
-                  <a href="/user/signup">Existing User - Login</a>
+                  <a href="./signin.html">Existing User - Login</a>
                 </div>
               </div>
             </form>
@@ -89,6 +89,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="./main.js"></script>
+    <script src="./js/sign-up.js"></script>
   </body>
 </html>
