--- a/views/signup.html
+++ b/views/signup.html
@@ -89,6 +89,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/sign-up.js"></script>
+    <script src="./js/signup.js"></script>
   </body>
 </html>
