--- a/views/signin.html
+++ b/views/signin.html
@@ -38,7 +38,7 @@
               <div class="row">
                 <div class="col">
                   <div class="mb-3">
-                    <label for="passwd" class="form-label">Password</label>
+                    <label for="password" class="form-label">Password</label>
                     <input
                       type="password"
                       id="password"
