--- a/views/expense.html
+++ b/views/expense.html
@@ -62,6 +62,9 @@
               Add Expense
             </button>
           </form>
+          <button id="rzp-button1" class="btn btn-outline-success mt-5">
+            Pay with Razorpay
+          </button>
         </div>
 
         <div class="col-7 mt-5">
@@ -95,6 +98,9 @@
         </div>
       </div>
     </div>
+
+    <!-- Razorpay CDN -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
     <!-- Axios CDN -->
     <script
