--- a/views/expense.html
+++ b/views/expense.html
@@ -62,7 +62,10 @@
               Add Expense
             </button>
           </form>
-          <button id="rzp-button1" class="btn btn-outline-success mt-5">
+          <button
+            id="rzp-button1"
+            class="btn btn-outline-success mt-5 visually-hidden"
+          >
             Pay with Razorpay
           </button>
         </div>
