--- a/views/expense.html
+++ b/views/expense.html
@@ -68,6 +68,9 @@
           >
             Pay with Razorpay
           </button>
+          <div class="container" id="leaderboard">
+
+          </div>
         </div>
 
         <div class="col-7 mt-5">
