Leaderboard UI Implementation

--- a/views/expense.html
+++ b/views/expense.html
@@ -68,8 +68,29 @@
           >
             Pay with Razorpay
           </button>
-          <div class="container" id="leaderboard">
 
+          <div class="mt-4" id="leaderboard">
+            <div class="container">
+              <h5>LeaderBoard Total Expenses</h5>
+            </div>
+            <div class="container" id="leaderboard_response">
+              <!-- <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col">NAME 1</div>
+                    <div class="col">32000</div>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col">NAME 2</div>
+                    <div class="col">32000</div>
+                  </div>
+                </div>
+              </div> -->
+            </div>
           </div>
         </div>
 
