--- a/views/forgotPassword.html
+++ b/views/forgotPassword.html
@@ -13,15 +13,19 @@
       crossorigin="anonymous"
     />
 
-    <title>Login</title>
+    <title>Forgot Password</title>
   </head>
   <body>
     <div class="container">
       <div class="col-xl-6 col-sm-8 m-4">
         <div class="card">
           <div class="card-body">
-            <h2 class="card-title mb-4">Login Here</h2>
-            <form action="/user/signin" method="POST" id="signin-form">
+            <h2 class="card-title mb-4">Forgot Password</h2>
+            <form
+              action="/password/forgot"
+              method="POST"
+              id="forgotPassword-form"
+            >
               <div class="row">
                 <div class="col">
                   <div class="mb-3">
@@ -35,38 +39,12 @@
                   </div>
                 </div>
               </div>
-              <div class="row">
-                <div class="col">
-                  <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input
-                      type="password"
-                      id="password"
-                      class="form-control"
-                      required
-                    />
-                  </div>
-                </div>
-              </div>
               <div class="mt-3 mb-3">
                 <button type="submit" class="btn btn-outline-primary">
                   Submit
                 </button>
-
-                <div class="mt-3">
-                  <a href="./signup.html">New User - Sign-up</a>
-                </div>
-                <div class="mt-3">
-                  <a href="./forgotPassword.html">Forgot Password</a>
-                </div>
               </div>
             </form>
-            <div
-              class="alert"
-              role="alert"
-              style="height: 60px"
-              id="alert"
-            ></div>
           </div>
         </div>
       </div>
@@ -79,6 +57,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/signin.js"></script>
+    <script src="./js/forgotPassword.js"></script>
   </body>
 </html>
