--- a/views/reports.html
+++ b/views/reports.html
@@ -47,6 +47,12 @@
               </tr> -->
             </tbody>
           </table>
+
+          <div class="mt-3">
+            <button type="submit" id="download" class="btn btn-outline-primary">
+              Download
+            </button>
+          </div>
         </div>
       </div>
 
