--- a/views/expense.html
+++ b/views/expense.html
@@ -16,10 +16,53 @@
     <title>Expense Tracker</title>
   </head>
   <body>
-    <div class="container mt-4">
+    <div class="container">
+      <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarTogglerDemo03"
+            aria-controls="navbarTogglerDemo03"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand" href="./expense.html">Expense-Tracker</a>
+
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+              <li class="nav-item active">
+                <a class="nav-link active" href="./expense.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./reports.html">Reports</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Download Data</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./leaderboard.html">LeaderBoard</a>
+              </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+              <button
+                class="btn btn-outline-danger my-2 my-sm-0"
+                id="logout-button"
+                type="submit"
+              >
+                Logout
+              </button>
+            </form>
+          </div>
+        </nav>
+      </header>
+
       <div class="row">
         <div class="col-4">
-          <h2>Expense Tracker</h2>
+          <!-- <h2>Expense Tracker</h2> -->
           <form id="expense-form">
             <!-- hidden input-field for id -->
             <input type="text" style="display: none" id="expenseID" />
@@ -68,56 +111,32 @@
           >
             Pay with Razorpay
           </button>
-
-          <div class="mt-4" id="leaderboard">
-            <div class="container">
-              <h5>LeaderBoard Total Expenses</h5>
-            </div>
-            <div class="container" id="leaderboard_response">
-              <!-- <div class="card">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col">NAME 1</div>
-                    <div class="col">32000</div>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col">NAME 2</div>
-                    <div class="col">32000</div>
-                  </div>
-                </div>
-              </div> -->
-            </div>
-          </div>
         </div>
 
         <div class="col-7 mt-5">
           <div class="container">
-            <h4>Products</h4>
+            <!-- <h4>Products</h4> -->
           </div>
           <div class="container" id="response">
             <!-- <div class="card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col">10000 Rupees</div>
-                  <div class="col">example product</div>
-                  <div class="col">example category</div>
-                  <div class="col">
-                    <button class="btn btn-outline-warning">
-                      Edit
-                    </button>
-                  </div>
-                  <div class="col">
-                    <button class="btn btn-outline-secondary">
-                      Delete
-                    </button>
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col">10000 Rupees</div>
+                    <div class="col">example product</div>
+                    <div class="col">example category</div>
+                    <div class="col">
+                      <button class="btn btn-outline-warning">
+                        Edit
+                      </button>
+                    </div>
+                    <div class="col">
+                      <button class="btn btn-outline-secondary">
+                        Delete
+                      </button>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </div> -->
+              </div> -->
           </div>
           <div class="container mt-3" id="total">
             <h5>Total value worth of products: Rs 0</h5>
@@ -144,5 +163,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./js/expense.js"></script>
+    <script src="./js/logout.js"></script>
   </body>
 </html>
