--- a/views/leaderboard.html
+++ b/views/leaderboard.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -12,8 +10,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-
-    <title>Forgot Password</title>
+    <title>LeaderBoard</title>
   </head>
   <body>
     <div class="container">
@@ -34,8 +31,8 @@
 
           <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-              <li class="nav-item active">
-                <a class="nav-link active" href="./expense.html">Home</a>
+              <li class="nav-item">
+                <a class="nav-link" href="./expense.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./reports.html">Reports</a>
@@ -44,7 +41,9 @@
                 <a class="nav-link" href="#">Download Data</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./leaderboard.html">LeaderBoard</a>
+                <a class="nav-link active" href="./leaderboard.html"
+                  >LeaderBoard</a
+                >
               </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -59,46 +58,50 @@
           </div>
         </nav>
       </header>
-      <div class="col-xl-6 col-sm-8 m-4">
-        <div class="card">
-          <div class="card-body">
-            <h2 class="card-title mb-4">Forgot Password</h2>
-            <form
-              action="/password/forgot"
-              method="POST"
-              id="forgotPassword-form"
-            >
-              <div class="row">
-                <div class="col">
-                  <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input
-                      type="text"
-                      id="email"
-                      class="form-control"
-                      required
-                    />
+      <div class="row">
+        <div class="col">
+          <div class="mt-4" id="leaderboard">
+            <div class="container">
+              <h5>LeaderBoard Total Expenses</h5>
+            </div>
+            <div class="container" id="leaderboard_response">
+              <!-- <div class="card">
+                    <div class="card-body">
+                      <div class="row">
+                        <div class="col">NAME 1</div>
+                        <div class="col">32000</div>
+                      </div>
+                    </div>
                   </div>
-                </div>
-              </div>
-              <div class="mt-3 mb-3">
-                <button type="submit" class="btn btn-outline-primary">
-                  Submit
-                </button>
-              </div>
-            </form>
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="row">
+                        <div class="col">NAME 2</div>
+                        <div class="col">32000</div>
+                      </div>
+                    </div>
+                  </div> -->
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <!-- Bootstrap Bundle with Popper -->
+    <!-- Axios CDN -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"
+      integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/forgotPassword.js"></script>
+    <script src="./js/leaderboard.js"></script>
+    <script src="./js/logout.js"></script>
   </body>
 </html>
