--- a/views/expense.html
+++ b/views/expense.html
@@ -113,10 +113,7 @@
           </button>
         </div>
 
-        <div class="col-7 mt-5">
-          <div class="container">
-            <!-- <h4>Products</h4> -->
-          </div>
+        <div class="col-8 mt-5">
           <div class="container" id="response">
             <!-- <div class="card">
                 <div class="card-body">
@@ -138,8 +135,21 @@
                 </div>
               </div> -->
           </div>
-          <div class="container mt-3" id="total">
+          <!-- <div class="container mt-3" id="total">
             <h5>Total value worth of products: Rs 0</h5>
+          </div> -->
+          <div class="container col-4 mt-5">
+            <div class="row" id="pagination">
+              <!-- <div class="col">
+                <button>1</button>
+              </div>
+              <div class="col">
+                <button>2</button>
+              </div>
+              <div class="col">
+                <button>3</button>
+              </div> -->
+            </div>
           </div>
         </div>
       </div>
