Download Reports Linked with NavBar Hyperlink

--- a/views/leaderboard.html
+++ b/views/leaderboard.html
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="./reports.html">Reports</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Download Data</a>
+                <a class="nav-link" href="#" id="download">Download Data</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="./leaderboard.html"
