--- a/views/expense.html
+++ b/views/expense.html
@@ -65,7 +65,7 @@
           <!-- <h2>Expense Tracker</h2> -->
           <form id="expense-form">
             <!-- hidden input-field for id -->
-            <input type="text" style="display: none" id="expenseID" />
+            <input type="text" id="expenseID" />
             <div class="mt-3">
               <label for="price" class="form-label">Expense Amount</label>
               <input type="number" class="form-control" id="price" required />
