--- a/views/expense.html
+++ b/views/expense.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link rel="shortcut icon" href="#" />
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -16,52 +18,51 @@
     <title>Expense Tracker</title>
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light m-2">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarTogglerDemo03"
+          aria-controls="navbarTogglerDemo03"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="./expense.html">Expense-Tracker</a>
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link active" href="./expense.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./reports.html">Reports</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" id="download">Download Data</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./leaderboard.html">LeaderBoard</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <button
+              class="btn btn-outline-danger my-2 my-sm-0"
+              id="logout-button"
+              type="submit"
+            >
+              Logout
+            </button>
+          </form>
+        </div>
+      </nav>
+    </header>
     <div class="container">
-      <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarTogglerDemo03"
-            aria-controls="navbarTogglerDemo03"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="navbar-brand" href="./expense.html">Expense-Tracker</a>
-
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-              <li class="nav-item active">
-                <a class="nav-link active" href="./expense.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./reports.html">Reports</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#" id="download">Download Data</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./leaderboard.html">LeaderBoard</a>
-              </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-              <button
-                class="btn btn-outline-danger my-2 my-sm-0"
-                id="logout-button"
-                type="submit"
-              >
-                Logout
-              </button>
-            </form>
-          </div>
-        </nav>
-      </header>
-
       <div class="row">
-        <div class="col-4">
+        <div class="col-lg-4">
           <!-- <h2>Expense Tracker</h2> -->
           <form id="expense-form">
             <!-- hidden input-field for id -->
@@ -113,50 +114,63 @@
           </button>
         </div>
 
-        <div class="col-8 mt-5">
-          <label for="row-per-page">Rows per page:</label>
-          <select name="row-per-page" id="row-per-page">
-            <option value="5" selected>5</option>
-            <option value="10">10</option>
-            <option value="25">25</option>
-            <option value="50">50</option>
-            <option value="100">100</option>
-          </select>
-          <button type="button" id="row-button">Show</button>
+        <div class="col-lg-8 mt-3">
+          <div class="container-fluid">
+            <form
+              class="form-inline d-flex justify-content-center align-items-center"
+            >
+              <label for="row-per-page" class="m-2">Rows:</label>
+              <select
+                class="m-2 form-select"
+                name="row-per-page"
+                id="row-per-page"
+              >
+                <option value="5" selected>5</option>
+                <option value="10">10</option>
+                <option value="25">25</option>
+                <option value="50">50</option>
+                <option value="100">100</option>
+              </select>
+              <button
+                type="button"
+                class="btn btn-outline-dark m-2"
+                id="row-button"
+              >
+                Show
+              </button>
+            </form>
+          </div>
+
           <div class="container mt-3" id="response">
             <!-- <div class="card">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col">10000 Rupees</div>
-                    <div class="col">example product</div>
-                    <div class="col">example category</div>
-                    <div class="col">
-                      <button class="btn btn-outline-warning">
-                        Edit
-                      </button>
-                    </div>
-                    <div class="col">
-                      <button class="btn btn-outline-secondary">
-                        Delete
-                      </button>
-                    </div>
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-auto">10000 Rupees</div>
+                  <div class="col-auto">example product</div>
+                  <div class="col-auto">example category</div>
+                  <div class="col-auto">
+                    <button class="btn btn-outline-warning">Edit</button>
+                  </div>
+                  <div class="col-auto">
+                    <button class="btn btn-outline-secondary">Delete</button>
                   </div>
                 </div>
-              </div> -->
+              </div>
+            </div> -->
           </div>
           <!-- <div class="container mt-3" id="total">
             <h5>Total value worth of products: Rs 0</h5>
           </div> -->
-          <div class="container col-4 mt-5">
-            <div class="row" id="pagination">
-              <!-- <div class="col">
-                <button>1</button>
+          <div class="container col-lg-5 justify-content-center">
+            <div class="row m-4" id="pagination">
+              <!-- <div class="col-auto">
+                <button class="btn btn-outline-dark">1</button>
               </div>
-              <div class="col">
-                <button>2</button>
+              <div class="col-auto">
+                <button class="btn btn-outline-dark">2</button>
               </div>
-              <div class="col">
-                <button>3</button>
+              <div class="col-auto">
+                <button class="btn btn-outline-dark">3</button>
               </div> -->
             </div>
           </div>
