--- a/views/forgotPassword.html
+++ b/views/forgotPassword.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link rel="shortcut icon" href="#" />
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -16,8 +18,10 @@
     <title>Forgot Password</title>
   </head>
   <body>
-    <div class="container">
-      <div class="col-xl-6 col-sm-8 m-4">
+    <div
+      class="container d-flex justify-content-center align-items-center vh-100"
+    >
+      <div class="col-10 col-sm-8 col-lg-5 col-xl-5">
         <div class="card">
           <div class="card-body">
             <h2 class="card-title mb-4">Forgot Password</h2>
@@ -43,6 +47,9 @@
                 <button type="submit" class="btn btn-outline-primary">
                   Submit
                 </button>
+                <div class="mt-3">
+                  <a href="./signin.html">Back to Sign in</a>
+                </div>
               </div>
             </form>
           </div>
