--- a/views/leaderboard.html
+++ b/views/leaderboard.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="shortcut icon" href="#" />
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -13,51 +16,51 @@
     <title>LeaderBoard</title>
   </head>
   <body>
-    <div class="container">
-      <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarTogglerDemo03"
-            aria-controls="navbarTogglerDemo03"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="navbar-brand" href="./expense.html">Expense-Tracker</a>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light m-2">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarTogglerDemo03"
+          aria-controls="navbarTogglerDemo03"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="./expense.html">Expense-Tracker</a>
 
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="./expense.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./reports.html">Reports</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#" id="download">Download Data</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="./leaderboard.html"
-                  >LeaderBoard</a
-                >
-              </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-              <button
-                class="btn btn-outline-danger my-2 my-sm-0"
-                type="submit"
-                id="logout-button"
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="./expense.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./reports.html">Reports</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" id="download">Download Data</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="./leaderboard.html"
+                >LeaderBoard</a
               >
-                Logout
-              </button>
-            </form>
-          </div>
-        </nav>
-      </header>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <button
+              class="btn btn-outline-danger my-2 my-sm-0"
+              type="submit"
+              id="logout-button"
+            >
+              Logout
+            </button>
+          </form>
+        </div>
+      </nav>
+    </header>
+    <div class="container">
       <div class="row">
         <div class="col">
           <div class="mt-4" id="leaderboard">
