--- a/views/reports.html
+++ b/views/reports.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link rel="shortcut icon" href="#" />
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -16,60 +18,73 @@
     <title>Expense Tracker</title>
   </head>
   <body>
-    <div class="container">
-      <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarTogglerDemo03"
-            aria-controls="navbarTogglerDemo03"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="navbar-brand" href="./expense.html">Expense-Tracker</a>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light m-2">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarTogglerDemo03"
+          aria-controls="navbarTogglerDemo03"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="./expense.html">Expense-Tracker</a>
 
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="./expense.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="./reports.html">Reports</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#" id="download">Download Data</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./leaderboard.html">LeaderBoard</a>
-              </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-              <button
-                class="btn btn-outline-danger my-2 my-sm-0"
-                type="submit"
-                id="logout-button"
-              >
-                Logout
-              </button>
-            </form>
-          </div>
-        </nav>
-      </header>
-      <div class="row mt-3">
-        <div class="col-2">
-          <form id="sortByDay">
-            <label for="selectedDate">Select Date</label>
-            <input type="date" name="selectedDate" id="selectedDate" required />
-            <div class="mt-3">
-              <button type="submit" class="btn btn-outline-dark">Show</button>
-            </div>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="./expense.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="./reports.html">Reports</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" id="download">Download Data</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./leaderboard.html">LeaderBoard</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <button
+              class="btn btn-outline-danger my-2 my-sm-0"
+              type="submit"
+              id="logout-button"
+            >
+              Logout
+            </button>
           </form>
         </div>
-        <div class="col-10">
+      </nav>
+    </header>
+
+    <div class="container">
+      <!-- <div class="row">
+        <div class="col"></div>
+      </div> -->
+
+      <div class="row mt-3">
+        <div class="col-lg-2 col-xl-2 m-2">
+          <form class="form-inline" id="sortByDay">
+            <div class="form-group">
+              <label class="sr-only" for="selectedDate">Select Date</label>
+              <input
+                type="date"
+                name="selectedDate"
+                id="selectedDate"
+                class="form-control"
+                required
+              />
+            </div>
+            <button type="submit" class="btn btn-outline-dark mt-2">
+              Show
+            </button>
+          </form>
+        </div>
+        <div class="col">
           <h4>Daily Report</h4>
           <table class="table table-striped">
             <thead class="table-dark">
@@ -82,32 +97,36 @@
             </thead>
             <tbody id="dayWiseTable">
               <!-- <tr>
-                  <td>01-03-2021</td>
-                  <td>Milk</td>
-                  <td>Food</td>
-                  <td>60.00</td>
-                </tr> -->
+                    <td>01-03-2021</td>
+                    <td>Milk</td>
+                    <td>Food</td>
+                    <td>60.00</td>
+                  </tr> -->
             </tbody>
           </table>
         </div>
       </div>
 
       <div class="row mt-5">
-        <div class="col-2">
-          <form id="sortByMonth">
-            <label for="selectedMonth">Select Month</label>
-            <input
-              type="month"
-              name="selectedMonth"
-              id="selectedMonth"
-              required
-            />
-            <div class="mt-3">
-              <button type="submit" class="btn btn-outline-dark">Show</button>
+        <div class="col-lg-2 col-xl-2 m-2">
+          <form class="form-inline" id="sortByMonth">
+            <div class="form-group">
+              <label class="sr-only" for="selectedMonth">Select Month</label>
+              <input
+                type="month"
+                name="selectedMonth"
+                id="selectedMonth"
+                class="form-control"
+                required
+              />
             </div>
+            <button type="submit" class="btn btn-outline-dark mt-2">
+              Show
+            </button>
           </form>
         </div>
-        <div class="col-10">
+
+        <div class="col">
           <h4>Monthly Report: 2021</h4>
           <table class="table table-striped">
             <thead class="table-dark">
@@ -120,11 +139,11 @@
             </thead>
             <tbody id="monthWiseTable">
               <!-- <tr>
-                  <td>01-03-2021</td>
-                  <td>Milk</td>
-                  <td>Food</td>
-                  <td>60.00</td>
-                </tr> -->
+                    <td>01-03-2021</td>
+                    <td>Milk</td>
+                    <td>Food</td>
+                    <td>60.00</td>
+                  </tr> -->
             </tbody>
           </table>
         </div>
