--- a/views/signup.html
+++ b/views/signup.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link rel="shortcut icon" href="#" />
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -13,14 +15,16 @@
       crossorigin="anonymous"
     />
 
-    <title>Registration</title>
+    <title>Expense Tracker Signup</title>
   </head>
   <body>
-    <div class="container">
-      <div class="col-xl-6 col-sm-8 m-4">
+    <div
+      class="container d-flex justify-content-center align-items-center vh-100"
+    >
+      <div class="col-10 col-sm-8 col-lg-5 col-xl-5">
         <div class="card">
           <div class="card-body">
-            <h2 class="card-title mb-4">Registration Form</h2>
+            <h2 class="card-title mb-4">Signup Here</h2>
             <form action="/user/signup" method="POST" id="signup-form">
               <div class="row">
                 <div class="col">
