--- a/views/expense.html
+++ b/views/expense.html
@@ -7,6 +7,12 @@
 
     <link rel="shortcut icon" href="#" />
 
+    <style>
+      .navbar-nav button {
+        border-style: none !important;
+      }
+    </style>
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -19,9 +25,9 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light m-2">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <button
-          class="navbar-toggler"
+          class="navbar-toggler m-2"
           type="button"
           data-toggle="collapse"
           data-target="#navbarTogglerDemo03"
@@ -31,32 +37,41 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="./expense.html">Expense-Tracker</a>
+        <h2 class="navbar-brand m-2">Expense-Tracker</h2>
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-              <a class="nav-link active" href="./expense.html">Home</a>
+          <ul class="navbar-nav mr-auto mt-2 ml-2 mt-lg-0">
+            <li class="nav-item">
+              <button class="nav-link btn-dark m-2 active" id="homepage">
+                Home
+              </button>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./reports.html">Reports</a>
+              <button class="nav-link btn-dark m-2" id="reports">
+                Reports
+              </button>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" id="download">Download Data</a>
+              <button class="nav-link btn-dark m-2" id="download">
+                Download Reports
+              </button>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./leaderboard.html">LeaderBoard</a>
+              <button class="nav-link btn-dark m-2" id="leaderboard">
+                LeaderBoard
+              </button>
+            </li>
+            <li class="nav-item" id="nav-item-buy-premium">
+              <button class="nav-link btn-dark m-2" id="buy-premium">
+                Buy Premium
+              </button>
+            </li>
+            <li class="nav-item">
+              <button class="nav-link btn-dark m-2" id="logout-button">
+                Logout
+              </button>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <button
-              class="btn btn-outline-danger my-2 my-sm-0"
-              id="logout-button"
-              type="submit"
-            >
-              Logout
-            </button>
-          </form>
         </div>
       </nav>
     </header>
@@ -106,12 +121,6 @@
               Add Expense
             </button>
           </form>
-          <button
-            id="rzp-button1"
-            class="btn btn-outline-success mt-5 visually-hidden"
-          >
-            Pay with Razorpay
-          </button>
         </div>
 
         <div class="col-lg-8 mt-3">
@@ -195,7 +204,8 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/navbar.js"></script>
     <script src="./js/expense.js"></script>
-    <script src="./js/logout.js"></script>
   </body>
 </html>
