--- a/views/signin.html
+++ b/views/signin.html
@@ -83,6 +83,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/main.js"></script>
     <script src="./js/signin.js"></script>
   </body>
 </html>
