Expense card view changed to table view

--- a/views/reports.html
+++ b/views/reports.html
@@ -109,6 +109,11 @@
               </tr>
             </thead>
             <tbody id="dayWiseTable">
+              <tr>
+                <td colspan="4">
+                  <p class="h6">Please choose a date and hit show button.</p>
+                </td>
+              </tr>
               <!-- <tr>
                     <td>01-03-2021</td>
                     <td>Milk</td>
@@ -151,6 +156,11 @@
               </tr>
             </thead>
             <tbody id="monthWiseTable">
+              <tr>
+                <td colspan="4">
+                  <p class="h6">Please choose a month and hit show button.</p>
+                </td>
+              </tr>
               <!-- <tr>
                     <td>01-03-2021</td>
                     <td>Milk</td>
