--- a/views/expense.html
+++ b/views/expense.html
@@ -150,23 +150,36 @@
             </form>
           </div>
 
-          <div class="container mt-3" id="response">
-            <!-- <div class="card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-auto">10000 Rupees</div>
-                  <div class="col-auto">example product</div>
-                  <div class="col-auto">example category</div>
-                  <div class="col-auto">
-                    <button class="btn btn-outline-warning">Edit</button>
-                  </div>
-                  <div class="col-auto">
-                    <button class="btn btn-outline-secondary">Delete</button>
-                  </div>
-                </div>
-              </div>
-            </div> -->
-          </div>
+          <table class="table table-hover mt-2">
+            <thead class="table-dark">
+              <tr>
+                <th scope="col">Amount</th>
+                <th scope="col">Description</th>
+                <th scope="col">Category</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+              </tr>
+            </thead>
+            <tbody id="response">
+              <tr>
+                <td colspan="5">
+                  <p class="h6">No Data is Available. Please add one!</p>
+                </td>
+              </tr>
+              <!-- <tr>
+                <td>60.00</td>
+                <td>Milk</td>
+                <td>Food</td>
+                <td>
+                  <button class="btn btn-outline-warning">Edit</button>
+                </td>
+                <td>
+                  <button class="btn btn-outline-secondary">Delete</button>
+                </td>
+              </tr> -->
+            </tbody>
+          </table>
+
           <!-- <div class="container mt-3" id="total">
             <h5>Total value worth of products: Rs 0</h5>
           </div> -->
