Optimized Code & Fixed Problems

--- a/views/leaderboard.html
+++ b/views/leaderboard.html
@@ -76,9 +76,9 @@
         <div class="col">
           <div class="mt-4" id="leaderboard">
             <div class="container">
-              <h5>LeaderBoard Total Expenses</h5>
+              <h5>LeaderBoard</h5>
             </div>
-            <div class="container" id="leaderboard_response">
+            <div class="container mt-3" id="leaderboard_response">
               <!-- <div class="card">
                     <div class="card-body">
                       <div class="row">
