--- a/views/reports.html
+++ b/views/reports.html
@@ -145,7 +145,7 @@
         </div>
 
         <div class="col">
-          <h4>Monthly Report: 2021</h4>
+          <h4>Monthly Report</h4>
           <table class="table table-striped">
             <thead class="table-dark">
               <tr>
