--- a/views/signup.html
+++ b/views/signup.html
@@ -75,12 +75,9 @@
                 </div>
               </div>
             </form>
-            <div
-              class="alert"
-              role="alert"
-              style="height: 60px"
-              id="alert"
-            ></div>
+            <div style="height: 60px">
+              <div class="alert" role="alert" id="alert"></div>
+            </div>
           </div>
         </div>
       </div>
