--- a/views/expense.html
+++ b/views/expense.html
@@ -123,7 +123,7 @@
           </form>
         </div>
 
-        <div class="col-lg-8 mt-3">
+        <div class="col mt-3">
           <div class="container-fluid">
             <form
               class="form-inline d-flex justify-content-center align-items-center"
