--- a/views/signin.html
+++ b/views/signin.html
@@ -65,25 +65,27 @@
                 </div>
               </div>
             </form>
-            <div
-              class="alert"
-              role="alert"
-              style="height: 60px"
-              id="alert"
-            ></div>
+
+            <div style="height: 60px">
+              <div class="alert" role="alert" id="alert"></div>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"
+    ></script>
     <!-- Bootstrap Bundle with Popper -->
     <script
+      defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/signin.js"></script>
+    <script defer src="./js/main.js"></script>
+    <script defer src="./js/signin.js"></script>
   </body>
 </html>
