Implementing reports under a date range

--- a/views/expense.html
+++ b/views/expense.html
@@ -83,17 +83,22 @@
             <!-- hidden input-field for id -->
             <input type="text" id="expenseID" />
             <div class="mt-3">
-              <label for="price" class="form-label">Expense Amount</label>
-              <input type="number" class="form-control" id="price" required />
-            </div>
-
-            <div class="mt-3">
               <label for="description" class="form-label">Description</label>
               <input
                 type="text"
                 class="form-control"
                 id="description"
+                placeholder="Eg: Manali Trip"
                 required
+              />
+            </div>
+            <div class="mt-3">
+              <label for="price" class="form-label">Expense Amount</label>
+              <input
+                type="number"
+                class="form-control"
+                id="price"
+                placeholder="Eg: 10000"
               />
             </div>
 
