--- a/views/reports.html
+++ b/views/reports.html
@@ -83,11 +83,23 @@
         <div class="col-lg-2 col-xl-2 m-2">
           <form class="form-inline" id="sortByDay">
             <div class="form-group">
-              <label class="sr-only" for="selectedDate">Select Date</label>
+              <label class="form-label" for="selectedStartDate"
+                >Start Date</label
+              >
               <input
                 type="date"
-                name="selectedDate"
-                id="selectedDate"
+                name="selectedStartDate"
+                id="selectedStartDate"
+                class="form-control"
+                required
+              />
+            </div>
+            <div class="form-group mt-2">
+              <label class="form-label" for="selectedEndDate">End Date</label>
+              <input
+                type="date"
+                name="selectedEndDate"
+                id="selectedEndDate"
                 class="form-control"
                 required
               />
@@ -98,7 +110,7 @@
           </form>
         </div>
         <div class="col">
-          <h4>Daily Report</h4>
+          <h4>Reports</h4>
           <table class="table table-striped">
             <thead class="table-dark">
               <tr>
@@ -129,7 +141,7 @@
         <div class="col-lg-2 col-xl-2 m-2">
           <form class="form-inline" id="sortByMonth">
             <div class="form-group">
-              <label class="sr-only" for="selectedMonth">Select Month</label>
+              <label class="form-label" for="selectedMonth">Select Month</label>
               <input
                 type="month"
                 name="selectedMonth"
