--- a/views/leaderboard.html
+++ b/views/leaderboard.html
@@ -48,16 +48,11 @@
               </button>
             </li>
             <li class="nav-item">
-              <button class="nav-link btn-dark m-2" id="download">
-                Download Reports
-              </button>
-            </li>
-            <li class="nav-item">
               <button class="nav-link btn-dark m-2 active" id="leaderboard">
                 LeaderBoard
               </button>
             </li>
-            <li class="nav-item">
+            <li class="nav-item visually-hidden" id="nav-item-buy-premium">
               <button class="nav-link btn-dark m-2" id="buy-premium">
                 Buy Premium
               </button>
