--- a/views/reports.html
+++ b/views/reports.html
@@ -50,16 +50,11 @@
               </button>
             </li>
             <li class="nav-item">
-              <button class="nav-link btn-dark m-2" id="download">
-                Download Reports
-              </button>
-            </li>
-            <li class="nav-item">
               <button class="nav-link btn-dark m-2" id="leaderboard">
                 LeaderBoard
               </button>
             </li>
-            <li class="nav-item">
+            <li class="nav-item visually-hidden" id="nav-item-buy-premium">
               <button class="nav-link btn-dark m-2" id="buy-premium">
                 Buy Premium
               </button>
@@ -108,6 +103,12 @@
               Show
             </button>
           </form>
+          <button
+            class="btn btn-outline-info mt-3 visually-hidden"
+            id="download_range"
+          >
+            Download
+          </button>
         </div>
         <div class="col">
           <h4>Reports</h4>
@@ -154,6 +155,12 @@
               Show
             </button>
           </form>
+          <button
+            class="btn btn-outline-info mt-3 visually-hidden"
+            id="download_monthly"
+          >
+            Download
+          </button>
         </div>
 
         <div class="col">
