Bootstrap error handling implemented

--- a/views/leaderboard.html
+++ b/views/leaderboard.html
@@ -7,6 +7,18 @@
     <link rel="shortcut icon" href="#" />
 
     <style>
+      body {
+        margin: 0;
+        padding: 0;
+        /* background-color: #f0f0f0; */
+      }
+
+      .card {
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
+
       .navbar-nav button {
         border-style: none !important;
       }
@@ -69,7 +81,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <div class="mt-4" id="leaderboard">
+          <div class="mt-5" id="leaderboard">
             <div class="container">
               <h5>LeaderBoard</h5>
             </div>
