--- a/views/expense.html
+++ b/views/expense.html
@@ -8,6 +8,18 @@
     <link rel="shortcut icon" href="#" />
 
     <style>
+      body {
+        margin: 0;
+        padding: 0;
+        /* background-color: #f0f0f0; */
+      }
+
+      .card {
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
+
       .navbar-nav button {
         border-style: none !important;
       }
@@ -72,57 +84,91 @@
     </header>
     <div class="container">
       <div class="row">
-        <div class="col-lg-4">
-          <!-- <h2>Expense Tracker</h2> -->
-          <form id="expense-form">
-            <!-- hidden input-field for id -->
-            <input type="text" id="expenseID" />
-            <div class="mt-3">
-              <label for="price" class="form-label">Expense Amount</label>
-              <input
-                type="number"
-                class="form-control"
-                id="price"
-                placeholder="Eg: 10000"
-              />
-            </div>
-            <div class="mt-3">
-              <label for="description" class="form-label">Description</label>
-              <input
-                type="text"
-                class="form-control"
-                id="description"
-                placeholder="Eg: Manali Trip"
-                required
-              />
-            </div>
-            <div class="mt-3">
-              <label for="category" class="form-label">Category</label>
-              <select class="form-select input-group" id="category">
-                <option selected>Others</option>
-                <option value="Rent">Rent</option>
-                <option value="Electricity">Electricity</option>
-                <option value="Transports">Transports</option>
-                <option value="Foods">Foods</option>
-                <option value="Gadgets">Gadgets</option>
-                <option value="Other Essentials">Other Essentials</option>
-                <option value="Movie">Movie</option>
-                <option value="Trip">Trip</option>
-                <option value="Others">Others</option>
-              </select>
-            </div>
+        <div class="col-xl-4 col-lg-4 col-md-4 mt-5">
+          <div class="card">
+            <div class="card-body">
+              <form id="expense-form">
+                <!-- hidden input-field for id -->
+                <input type="text" id="expenseID" class="d-none" />
 
-            <button
-              class="btn btn-outline-primary mt-4"
-              id="submit-button"
-              type="submit"
-            >
-              Add Expense
-            </button>
-          </form>
+                <div class="row">
+                  <div class="col">
+                    <div class="mb-3">
+                      <label for="price" class="form-label"
+                        >Expense Amount</label
+                      >
+                      <input
+                        type="number"
+                        class="form-control"
+                        id="price"
+                        placeholder="2,500"
+                      />
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col">
+                    <div class="mb-3">
+                      <label for="description" class="form-label"
+                        >Description</label
+                      >
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="description"
+                        placeholder="Electricity Bill"
+                        required
+                      />
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col">
+                    <div class="mb-3">
+                      <label for="category" class="form-label">Category</label>
+                      <select class="form-select input-group" id="category">
+                        <option selected>Others</option>
+                        <option value="Rent">Rent</option>
+                        <option value="Electricity">Electricity</option>
+                        <option value="Transports">Transports</option>
+                        <option value="Foods">Foods</option>
+                        <option value="Gadgets">Gadgets</option>
+                        <option value="Other Essentials">
+                          Other Essentials
+                        </option>
+                        <option value="Movie">Movie</option>
+                        <option value="Trip">Trip</option>
+                        <option value="Others">Others</option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
+
+                <button
+                  class="btn btn-outline-primary"
+                  id="submit-button"
+                  type="submit"
+                >
+                  Add Expense
+                </button>
+              </form>
+            </div>
+          </div>
+
+          <!-- Alert for Error Response -->
+          <div
+            id="errorAlert"
+            class="alert alert-danger mt-5 d-none"
+            role="alert"
+          >
+            An error occurred. Please try again later.
+          </div>
         </div>
-
-        <div class="col mt-3">
+        <div
+          class="col-xl-7 col-lg-7 col-md-7 offset-xl-1 offset-lg-1 offset-md-1 mt-5"
+        >
           <div class="container-fluid">
             <form
               class="form-inline d-flex justify-content-center align-items-center"
@@ -142,7 +188,7 @@
             </form>
           </div>
 
-          <table class="table table-hover mt-2">
+          <table class="table table-bordered mt-2">
             <thead class="table-dark">
               <tr>
                 <th scope="col">Amount</th>
