--- a/views/reports.html
+++ b/views/reports.html
@@ -8,6 +8,17 @@
     <link rel="shortcut icon" href="#" />
 
     <style>
+      body {
+        margin: 0;
+        padding: 0;
+        /* background-color: #f0f0f0; */
+      }
+
+      .card {
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
       .navbar-nav button {
         border-style: none !important;
       }
@@ -74,44 +85,63 @@
         <div class="col"></div>
       </div> -->
 
-      <div class="row mt-3">
-        <div class="col-lg-2 col-xl-2 m-2">
-          <form class="form-inline" id="sortByDay">
-            <div class="form-group">
-              <label class="form-label" for="selectedStartDate"
-                >Start Date</label
+      <div class="row mt-5">
+        <div class="col-xl-2 col-lg-3 col-md-3">
+          <div class="card">
+            <div class="card-body">
+              <form class="form-inline" id="sortByDay">
+                <div class="form-group">
+                  <label class="form-label" for="selectedStartDate"
+                    >Start Date</label
+                  >
+                  <input
+                    type="date"
+                    name="selectedStartDate"
+                    id="selectedStartDate"
+                    class="form-control"
+                    required
+                  />
+                </div>
+                <div class="form-group mt-2">
+                  <label class="form-label" for="selectedEndDate"
+                    >End Date</label
+                  >
+                  <input
+                    type="date"
+                    name="selectedEndDate"
+                    id="selectedEndDate"
+                    class="form-control"
+                    required
+                  />
+                </div>
+                <button type="submit" class="btn btn-outline-dark mt-2">
+                  Show
+                </button>
+              </form>
+              <button
+                class="btn btn-outline-info mt-3 visually-hidden"
+                id="download_range"
               >
-              <input
-                type="date"
-                name="selectedStartDate"
-                id="selectedStartDate"
-                class="form-control"
-                required
-              />
+                Download
+              </button>
             </div>
-            <div class="form-group mt-2">
-              <label class="form-label" for="selectedEndDate">End Date</label>
-              <input
-                type="date"
-                name="selectedEndDate"
-                id="selectedEndDate"
-                class="form-control"
-                required
-              />
+          </div>
+
+          <div class="mt-5" style="height: 60px">
+            <!-- Alert for Error Response -->
+            <div
+              id="errorAlertRange"
+              class="alert alert-danger d-none"
+              role="alert"
+            >
+              An error occurred. Please try again later.
             </div>
-            <button type="submit" class="btn btn-outline-dark mt-2">
-              Show
-            </button>
-          </form>
-          <button
-            class="btn btn-outline-info mt-3 visually-hidden"
-            id="download_range"
-          >
-            Download
-          </button>
+          </div>
         </div>
-        <div class="col">
-          <h4>Reports</h4>
+        <div
+          class="col-xl-9 col-lg-8 col-md-8 offset-xl-1 offset-lg-1 offset-md-1 mt-4"
+        >
+          <h5>Reports</h5>
           <table class="table table-striped">
             <thead class="table-dark">
               <tr>
@@ -139,31 +169,50 @@
       </div>
 
       <div class="row mt-5">
-        <div class="col-lg-2 col-xl-2 m-2">
-          <form class="form-inline" id="sortByMonth">
-            <div class="form-group">
-              <label class="form-label" for="selectedMonth">Select Month</label>
-              <input
-                type="month"
-                name="selectedMonth"
-                id="selectedMonth"
-                class="form-control"
-                required
-              />
+        <div class="col-xl-2 col-lg-3 col-md-3">
+          <div class="card">
+            <div class="card-body">
+              <form class="form-inline" id="sortByMonth">
+                <div class="form-group">
+                  <label class="form-label" for="selectedMonth"
+                    >Select Month</label
+                  >
+                  <input
+                    type="month"
+                    name="selectedMonth"
+                    id="selectedMonth"
+                    class="form-control"
+                    required
+                  />
+                </div>
+                <button type="submit" class="btn btn-outline-dark mt-2">
+                  Show
+                </button>
+              </form>
+              <button
+                class="btn btn-outline-info mt-3 visually-hidden"
+                id="download_monthly"
+              >
+                Download
+              </button>
             </div>
-            <button type="submit" class="btn btn-outline-dark mt-2">
-              Show
-            </button>
-          </form>
-          <button
-            class="btn btn-outline-info mt-3 visually-hidden"
-            id="download_monthly"
-          >
-            Download
-          </button>
+          </div>
+
+          <div class="mt-5" style="height: 60px">
+            <!-- Alert for Error Response -->
+            <div
+              id="errorAlertMonth"
+              class="alert alert-danger d-none"
+              role="alert"
+            >
+              An error occurred. Please try again later.
+            </div>
+          </div>
         </div>
 
-        <div class="col">
+        <div
+          class="col-xl-9 col-lg-8 col-md-8 offset-xl-1 offset-lg-1 offset-md-1 mt-4"
+        >
           <h4>Monthly Report</h4>
           <table class="table table-striped">
             <thead class="table-dark">
